deploy/bases/cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ava-redis
    app.kubernetes.io/part-of: ava
    app.kubernetes.io/component: redis
  name: ava-redis
spec:
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: ava-redis
