deploy/bases/cache/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ava-redis-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ava-redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ava-server
      ports:
        - protocol: TCP
          port: 6379
